Fix broken Layout

--- a/SITE/styels/components/canvas.css
+++ b/SITE/styels/components/canvas.css
@@ -2,7 +2,7 @@
   display: grid;
   align-items: center;
   justify-content: center;
-  min-width: 300px;
+  min-width: 450px;
 }
 
 canvas {
